--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology.qa65</groupId>
-    <artifactId>Java_9_Radio</artifactId>
+    <artifactId>Java_10_films</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
